--- a/AIC/Quarter-2/Numpy-Review/Numpy_Chap4_Practice.ipynb
+++ b/AIC/Quarter-2/Numpy-Review/Numpy_Chap4_Practice.ipynb
@@ -504,18 +504,16 @@
         "arr_range=np.arange(20).reshape(2,10)\n",
         "print(\"arr_range values for arange(20).reshape(2,10) are : \" , arr_range)\n",
         "arr_range=np.arange(20).reshape(4,5)\n",
-        "print(\"\\narr_range values for arange(20).reshape(4,5) are : \" , arr_range)\n",
-        "arr_range.revel()"
+        "print(\"\\narr_range values for arange(20).reshape(4,5) are : \" , arr_range)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 336
+          "base_uri": "https://localhost:8080/"
         },
         "id": "KRgYlTiWwbYN",
-        "outputId": "de5d4df0-d5dc-4710-bb82-205b560f83ab"
+        "outputId": "fe01fb6c-99e2-4fac-adcb-807c3bce4b94"
       },
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,17 +526,6 @@
             " [ 5  6  7  8  9]\n",
             " [10 11 12 13 14]\n",
             " [15 16 17 18 19]]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-5ddfea2492fc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0marr_range\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\narr_range values for arange(20).reshape(4,5) are : \"\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0marr_range\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0marr_range\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'revel'"
           ]
         }
       ]
