--- a/AIC/Quarter-2/Numpy-Review/Numpy_Chap4_Practice-1.ipynb
+++ b/AIC/Quarter-2/Numpy-Review/Numpy_Chap4_Practice-1.ipynb
@@ -244,27 +244,29 @@
         "## Creating Array\n",
         "# We can create array using the array function. We have to pass an object containing values and it produces a new NumPy array e.g : List\n",
         "data1 = [6, 7.5, 8, 0, 1]\n",
-        "arr1 = np. array(data1)\n",
-        "arr1\n"
+        "arr1 = np.array(data1)\n",
+        "arr1.ndim\n",
+        "arr1.shape\n",
+        "arr1.dtype\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zOd28YOQreM2",
-        "outputId": "5e21c346-48db-40d9-84d4-489a8f039e8f"
+        "outputId": "7a63856c-f24f-4aa4-f52a-ca1751c5c6e3"
       },
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([6. , 7.5, 8. , 0. , 1. ])"
+              "dtype('float64')"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 25
         }
       ]
     },
@@ -274,27 +276,26 @@
         "# Nested sequences, like a list of equal-length lists, will be converted into a multidimensional array:\n",
         "data2 = [[1, 2, 3, 4], [5, 6, 7, 8]]\n",
         "arr2 = np. array(data2)\n",
-        "arr2"
+        "arr2.ndim\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gNHH4YZDsj4B",
-        "outputId": "fe2fd951-c862-4c2e-fe67-64b896d975f6"
+        "outputId": "a5ffeccd-e219-4cb4-cf51-e364a12cbe6c"
       },
-      "execution_count": 8,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1, 2, 3, 4],\n",
-              "       [5, 6, 7, 8]])"
+              "2"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 23
         }
       ]
     },
@@ -501,43 +502,168 @@
       "cell_type": "code",
       "source": [
         "# Using arange function :  arange is an array-valued version of the built-in Python range function:\n",
-        "arr_range=np.arange(20).reshape(2,10)\n",
+        "arr_range=np.arange(20).reshape(3,6)\n",
         "print(\"arr_range values for arange(20).reshape(2,10) are : \" , arr_range)\n",
         "arr_range=np.arange(20).reshape(4,5)\n",
         "print(\"\\narr_range values for arange(20).reshape(4,5) are : \" , arr_range)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 244
         },
         "id": "KRgYlTiWwbYN",
-        "outputId": "fe01fb6c-99e2-4fac-adcb-807c3bce4b94"
+        "outputId": "cc15c3a7-58ba-4fe8-9afb-0cbfd08e19c5"
       },
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "arr_range values for arange(20).reshape(2,10) are :  [[ 0  1  2  3  4  5  6  7  8  9]\n",
-            " [10 11 12 13 14 15 16 17 18 19]]\n",
-            "\n",
-            "arr_range values for arange(20).reshape(4,5) are :  [[ 0  1  2  3  4]\n",
-            " [ 5  6  7  8  9]\n",
-            " [10 11 12 13 14]\n",
-            " [15 16 17 18 19]]\n"
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-27-5983081aeea3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Using arange function :  arange is an array-valued version of the built-in Python range function:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0marr_range\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"arr_range values for arange(20).reshape(2,10) are : \"\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0marr_range\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0marr_range\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\narr_range values for arange(20).reshape(4,5) are : \"\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0marr_range\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 20 into shape (3,6)"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "## numpy.ones_like method\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "array = np.arange(10).reshape(5, 2)\n",
+        "print(\"Original array : \\n\", array)\n",
+        "\n",
+        "\n",
+        "b = np.ones_like(array, float)\n",
+        "print(\"\\nMatrix b : \\n\", b)\n",
+        "\n",
+        "array = np.arange(8)\n",
+        "c = np.ones_like(array)\n",
+        "print(\"\\nMatrix c : \\n\", c)\n"
+      ],
       "metadata": {
-        "id": "TVrRz97Rv5US"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TVrRz97Rv5US",
+        "outputId": "1f5f1818-2de4-4ed1-9997-3c5e6640ace2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original array : \n",
+            " [[0 1]\n",
+            " [2 3]\n",
+            " [4 5]\n",
+            " [6 7]\n",
+            " [8 9]]\n",
+            "\n",
+            "Matrix b : \n",
+            " [[1. 1.]\n",
+            " [1. 1.]\n",
+            " [1. 1.]\n",
+            " [1. 1.]\n",
+            " [1. 1.]]\n",
+            "\n",
+            "Matrix c : \n",
+            " [1 1 1 1 1 1 1 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr1 = np. array([1, 2, 3], dtype=np. float64)\n",
+        "arr1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1t3p91NrIdpB",
+        "outputId": "cafe015f-70fc-4e13-f918-a9e64098c73b"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 2., 3.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# We can explicitly convert or cast an array from one dtype to another using ndarray’s astype method:\n",
+        "arr = np. array([1, 2, 3, 4, 5])\n",
+        "print(\"Data type of array arr is :\",arr.dtype)\n",
+        "float_arr = arr.astype(np. float64)\n",
+        "print(\"Data type of array float_arr is :\",float_arr.dtype)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FpyQnG_0I51R",
+        "outputId": "95e38a57-ad52-4512-b7c1-034cb3c6176b"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Data type of array arr is : int64\n",
+            "Data type of array float_arr is : float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Similarly If we cast some floating-point numbers to be of integer dtype, the decimal part will be truncated\n",
+        "arr = np. array([3.7, - 1.2, - 2.6, 0.5, 12.9, 10.1])\n",
+        "print(\"Values of arr are : \",arr)\n",
+        "b= arr.astype(np. int32)\n",
+        "print(\"Values of b is : \",b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o-LjyyY2KNnB",
+        "outputId": "c5af1d0f-1bce-4b22-941a-db064980a3d2"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Values of arr are :  [ 3.7 -1.2 -2.6  0.5 12.9 10.1]\n",
+            "Values of b is :  [ 3 -1 -2  0 12 10]\n"
+          ]
+        }
+      ]
     }
   ]
 }
